data/template/etc/firewall.conf
*filter

-P INPUT DROP
-P OUTPUT ACCEPT
-P FORWARD ACCEPT

# Allow traffic for INPUT, OUTPUT on loopback
# address interface.
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Allow Pings
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Allow SSH with rate limiting
-A INPUT -p tcp -m tcp --dport ssh -m conntrack --ctstate NEW -m recent --set --name DEFAULT --rsource
-N LOG_AND_DROP
-A INPUT -p tcp -m tcp --dport ssh -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 4 --name DEFAULT --rsource -j LOG_AND_DROP
-A INPUT -p tcp -m tcp --dport ssh -m state --state NEW -m recent --update --seconds 60 --hitcount 4 --name DEFAULT --rsource -j LOG_AND_DROP
-A INPUT -p tcp -m tcp --dport ssh -j ACCEPT
-A LOG_AND_DROP -j LOG --log-prefix "iptables deny: " --log-level 7
-A LOG_AND_DROP -j DROP

# Continue to allow established connections
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

COMMIT
